--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
     <link rel="stylesheet" href="./STYLES/admin.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Admin PEHTR</title>
 </head>
 <body class="wrap4 d-flex align-items-center justify-content-center vh-100">
@@ -21,17 +21,21 @@
         <div class="d-flex justify-content-center">
             <p>Ingresa tus credenciales de administrador</p>
         </div>
-        <div class="input-group justify-content-center">
-            <div>
-                <i class="fa-regular fa-circle-user input-group-text"></i> 
-            </div>
-            <input type="text" placeholder="Usuario Admin">
+        <div class="justify-content-center">
+            <div class="input-group">
+                <div class="input-group-text">
+                    <i class="bi bi-person-fill"></i> 
+                </div>
+                <input class="form-control" type="text" placeholder="Usuario Admin">
+            </div>            
         </div>
-        <div class="input-group justify-content-center mt-2">
-            <div>
-                <i class="fa-solid fa-lock input-group-text"></i> 
-            </div>
-            <input type="password" placeholder="Contraseña">
+        <div class="justify-content-center mt-2">
+            <div class="input-group">
+                <div class="input-group-text">
+                    <i class="bi bi-lock-fill"></i>
+                </div>
+                <input class="form-control" type="password" placeholder="Contraseña">    
+            </div>            
         </div>
         <br>
         <div>
