--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -70,7 +70,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#contenido" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa-regular fa-circle-user"></i>
+                                    <i class="bi bi-person-circle"></i>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item userDespl" href="./ingreso.html">Inicia Sesión</a></li>
@@ -166,7 +166,7 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="card" style="width: 100%;">
-                            <img src="./ASSETS/IMG/Video Introducción.jpg" class="card-img-top" alt="...">
+                            <img src="./ASSETS/IMG/introduccionModulo.jpg" class="card-img-top" alt="...">
                             <div class="card-body" id="card1">
                                 <h4>1. Introducción</h4><h4>del módulo</h4>
                                 <p class="card-text">Con la ayuda de elementos audiovisuales interesantes y agradables,
@@ -346,11 +346,11 @@
         <div class="containerFooter">
             <div class="row">
                 <div class="col text-left">
-                    <p class="footerText">Encuéntranos en: <br><i class="fa-brands fa-facebook"></i> <a
+                    <p class="footerText">Encuéntranos en: <br><i class="bi bi-facebook"></i></i> <a
                             href="https://www.facebook.com/?locale=es_LA" target="_blank"> Facebook</a><br>
-                        <i class="fa-brands fa-twitter"></i> <a href="https://twitter.com/?lang=es"
+                            <i class="bi bi-twitter-x"></i></i> <a href="https://twitter.com/?lang=es"
                             target="_blank">Twitter</a><br>
-                        <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/" target="_blank">
+                            <i class="bi bi-instagram"></i> <a href="https://www.instagram.com/" target="_blank">
                             Instagram</a>
                     </p>
 
