--- a/public/ingreso.html
+++ b/public/ingreso.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
     <link rel="stylesheet" href="./STYLES/ingreso.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">    
     <title>Login PEHTR</title>
 </head>
 <body class="wrap2 d-flex align-items-center justify-content-center vh-100">
@@ -15,19 +15,23 @@
         <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height: 3rem"></a>
         </div>
         <div class="d-flex justify-content-center"><h3>Inicio de sesión</h3></div>
-        <div class="input-group justify-content-center">
-            <div>
-                <i class="fa-regular fa-circle-user input-group-text"></i> 
+        <div class="justify-content-center">
+            <div class="input-group">
+                <div class="input-group-text">
+                    <i class="bi bi-person-fill"></i> 
+                </div>
+                <input class="form-control" type="text" placeholder="Usuario">
             </div>
-            <input type="text" placeholder="Usuario">
         </div>
-        <div class="input-group justify-content-center mt-2">
-            <div>
-                <i class="fa-solid fa-lock input-group-text"></i> 
+        <div class="justify-content-center mt-2">
+            <div class="input-group">
+                <div class="input-group-text">
+                <i class="bi bi-lock-fill"></i> 
+                </div>
+                <input class="form-control" type="password" placeholder="Contraseña">
             </div>
-            <input type="password" placeholder="Contraseña">
-        </div>
-        <div>
+        </div>        
+            <div>
             <div class="d-flex justify-content-center">
                 <input type="checkbox">
                 <div>Recordar credenciales</div>
@@ -49,7 +53,7 @@
         <div class="d-flex justify-content-center">            
                 <a class="nav-link dropdown-toggle" href="#contenido" role="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-solid fa-gear"></i>
+                    <i class="bi bi-gear-fill"></i>
                 </a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
