--- a/public/modulo1.html
+++ b/public/modulo1.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo 1</title>
+    <title>PEHTR - Módulo 1</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./STYLES/styles.css">
     <link rel="stylesheet" href="./STYLES/mq.css">
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
@@ -14,13 +15,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <!-- Barra de navegación -->
-        <nav class="navbar navbar-expand-sm">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <div class="col-md-2">
                     <a class="navbar-brand" href="#"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png"
@@ -40,17 +40,29 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html#queEs">¿Qué es el PEHTR?</a>
+                                <a class="nav-link" href="#objetivoMod1">Objetivos</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html#estructura">Estructura</a>
+                                <a class="nav-link" href="#introMod1">Introducción</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#desarrolloMod1">Desarrollo</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#actividadMod1">Actividad</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#actividadMod1">Test</a>
                             </li>
 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
-                                    Contenido
+                                    Módulos
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./modulo1.html">Módulo 1 - Introducción</a></li>
@@ -69,10 +81,8 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
-                                <a class="nav-link 
-                dropdown-toggle" href="#contenido" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa-regular 
-                fa-circle-user"></i>
+                                <a class="nav-link dropdown-toggle" href="#contenido" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-person-circle"></i>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
@@ -88,26 +98,149 @@
             </div>
         </nav>
     </header>
-    <main class="container text-center">
-        <h1>MÓDULO 1</h1>
-        <H2>EN CONSTRUCCIÓN</H2>
-        <h5>Actualmente este módulo se encuentra en construcción y próximamente estará disponible</h5>
-        <img src="./ASSETS/VIDEO/En construcción.gif" width="40%">
+    <main class="container text-left">
+        <h2 class="mt-3" style="font-weight: bolder;">Módulo 1 - Introducción</h2>
+        <h2>La búsqueda de recompensas</h2>
+        
+<!-- Objetivos módulo -->
+        <section class="modulo2 rounded-3" id="#objetivoMod1">
+            <h3>Objetivos del módulo</h3>
+            <hr>
+            <div class="container text-left">
+                <div class="row align-items-center">
+                    <div class=col-md-4>
+                        <figure class="img2">
+                            <img src="./ASSETS/IMG/objetivosModulo.jpg" width="100%">
+                        </figure>
+                    </div>
+                    <div class=col-md-8>
+                        <article class="texto2" id="md2">
+                            <p>El objetivo de este módulo es ayudarte a fortalecer la constancia y encontrar motivadores que permitan lograr objetivos a mediano y largo plazo. Estas habilidades son útiles cuando sientas tentación de aplazar las obligaciones por disfrutar recompensas pasajeras.</p><p>Para ello, estudiaremos cómo funciona el sistema de recompensas en nuestro cerebro revisando el siguiente contenido:</p>
+                            <ul class="introContent">
+                                <li><a>Cómo funciona el sistema de recompensas en nuestro cerebro</a></li>
+                                <li><a>Distractores que dificultan la realización de tareas</a></li>
+                                <li><a>Proyección de metas significativas</a></li>
+                                <li><a>Teletrabajo: Las labores de la casa vs Las tareas del trabajo</a></li>
+                                <li><a>Cambio de óptica: De actividad demandante a motivador</a></li>
+                            </ul>
+                            <br>                            
+                        </article>
+                    </div>
+                </div>                
+        </section>
+        <br>  
+<!-- Introducción módulo -->             
+        <section class="modulo1 rounded-3" id="introMod1">
+            <h3>Introducción del módulo</h3>            
+            <hr>
+            <div class="container text-left">                
+                <div class="row align-items-center">
+                    <div class=col-md-4>
+                        <figure class="img2">
+                            <img src="./ASSETS/IMG/introduccionModulo.jpg" width="100%">
+                        </figure>
+                    </div>
+                    <div class=col-md-8>
+                        <article class="texto2" id="md2">
+                            <ul class="introContent">
+                                <li><a>Cómo funciona el sistema de recompensas en nuestro cerebro</a></li>
+                                <li><a>Distractores que dificultan la realización de tareas</a></li>
+                                <li><a>Proyección de metas significativas</a></li>
+                                <li><a>Teletrabajo: Las labores de la casa vs Las tareas del trabajo</a></li>
+                                <li><a>Cambio de óptica: De actividad demandante a motivador</a></li>
+                            </ul>
+                        </article>
+                    </div>
+                </div>               
+        </section>
         <br>
+<!-- Desarrollo módulo -->
+        <section class="modulo2 rounded-3" id="desarrolloMod1">
+            <h3>Desarrollo temático</h3>
+            <hr>
+            <div class="container text-center">
+                <div class="row align-items-center">
+                    <div class=col-md-4>
+                        <figure class="img2">
+                            <img src="./ASSETS/IMG/Desarrollo temático.jpg" width="100%">
+                        </figure>
+                    </div>
+                    <div class=col-md-8>
+                        <article class="texto2" id="md2">
+                            <p class="textBold">"Algunas personas piensan que lo mejor de trabajar de manera remota es
+                                no tener al jefe encima"</p>
+                            <br>
+                            <p>Trabajar en casa conlleva a hacerlo sin la supervisión y orientación tradicional de la
+                                presencialidad. Esto implica que debes tomar decisiones y crear planes de trabajo para
+                                cumplir tus funciones de manera responsable. En este módulo encontrarás herramientas que
+                                fortalecerán tu autonomía, creatividad, productividad y responsabilidad.</p>
+                        </article>
+                    </div>
+                </div>                
+        </section>
         <br>
-        <button>
-            <a href="./index.html">VOLVER A INICIO</a>
-        </button>
+<!-- Actividad módulo -->
+    </section>
+    <br>       
+    <section class="modulo1 rounded-3" id="actividadMod1">
+        <h3>Actividad de afianzamiento</h3>
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class=col-md-4>
+                    <figure class="img2">
+                        <img src="./ASSETS/IMG/Actividad afianzamiento2.jpg" width="100%">
+                    </figure>
+                </div>
+                <div class=col-md-8>
+                    <article class="texto2" id="md2">
+                        <p class="textBold">"Algunas personas piensan que lo mejor de trabajar de manera remota es
+                            no tener al jefe encima"</p>
+                        <br>
+                        <p>Trabajar en casa conlleva a hacerlo sin la supervisión y orientación tradicional de la
+                            presencialidad. Esto implica que debes tomar decisiones y crear planes de trabajo para
+                            cumplir tus funciones de manera responsable. En este módulo encontrarás herramientas que
+                            fortalecerán tu autonomía, creatividad, productividad y responsabilidad.</p>
+                    </article>
+                </div>
+            </div>  
+        </div>         
+    </section>
+    <br>
+<!-- Test módulo -->
+    <section class="modulo2 rounded-3" id="testMod1">
+        <h3>Test de evaluación</h3>
+        <hr>
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class=col-md-4>
+                    <figure class="img2">
+                        <img src="./ASSETS/IMG/Evaluación.jpg" width="100%">
+                    </figure>
+                </div>
+                <div class=col-md-8>
+                    <article class="texto2" id="testMod1">
+                        <p class="textBold">"Algunas personas piensan que lo mejor de trabajar de manera remota es
+                            no tener al jefe encima"</p>
+                        <br>
+                        <p>Trabajar en casa conlleva a hacerlo sin la supervisión y orientación tradicional de la
+                            presencialidad. Esto implica que debes tomar decisiones y crear planes de trabajo para
+                            cumplir tus funciones de manera responsable. En este módulo encontrarás herramientas que
+                            fortalecerán tu autonomía, creatividad, productividad y responsabilidad.</p>
+                    </article>
+                </div>
+            </div>            
+    </section>
+    <br>       
     </main>
     <footer>
         <div class="containerFooter">
             <div class="row">
                 <div class="col text-left">
-                    <p class="footerText">Encuéntranos en: <br><i class="fa-brands fa-facebook"></i> <a
+                    <p class="footerText">Encuéntranos en: <br><i class="bi bi-facebook"></i></i> <a
                             href="https://www.facebook.com/?locale=es_LA" target="_blank"> Facebook</a><br>
-                        <i class="fa-brands fa-twitter"></i> <a href="https://twitter.com/?lang=es"
+                            <i class="bi bi-twitter-x"></i></i> <a href="https://twitter.com/?lang=es"
                             target="_blank">Twitter</a><br>
-                        <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/" target="_blank">
+                            <i class="bi bi-instagram"></i> <a href="https://www.instagram.com/" target="_blank">
                             Instagram</a>
                     </p>
 
