--- a/public/modulo2.html
+++ b/public/modulo2.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Módulo 2</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./STYLES/styles.css">
     <link rel="stylesheet" href="./STYLES/mq.css">
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -62,7 +62,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#contenido" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fa-regular fa-circle-user"></i>
+                                <i class="bi bi-person-circle"></i>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
@@ -92,11 +92,11 @@
         <div class="containerFooter">
             <div class="row">
                 <div class="col text-left">
-                    <p class="footerText">Encuéntranos en: <br><i class="fa-brands fa-facebook"></i> <a href="https://www.facebook.com/?locale=es_LA"
+                    <p class="footerText">Encuéntranos en: <br><i class="bi bi-facebook"></i></i> <a href="https://www.facebook.com/?locale=es_LA"
                         target="_blank"> Facebook</a><br>
-                    <i class="fa-brands fa-twitter"></i> <a href="https://twitter.com/?lang=es"
+                        <i class="bi bi-twitter-x"></i> <a href="https://twitter.com/?lang=es"
                         target="_blank">Twitter</a><br>
-                    <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/" target="_blank">
+                        <i class="bi bi-instagram"></i> <a href="https://www.instagram.com/" target="_blank">
                         Instagram</a></p>                   
                     
                 </div>
