--- a/public/registro.html
+++ b/public/registro.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
     <link rel="stylesheet" href="./STYLES/registro.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Registro PEHTR</title>
 </head>
 
@@ -44,7 +44,7 @@
             <div>
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                <i class="fa-solid fa-gear"></i>
+                <i class="bi bi-gear-fill"></i>
             </a>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
