--- a/public/soporte.html
+++ b/public/soporte.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soporte PEHTR</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./STYLES/soporte.css">
     <link rel="stylesheet" href="./STYLES/mq.css">
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
@@ -14,7 +15,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="pagSoporte">
@@ -53,13 +53,13 @@
                                     Contenido
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./modulo1.html">Módulo 1 - Introducción</a></li>
-                                    <li><a class="dropdown-item" href="./modulo2.html">Módulo 2 - Habilidades de
+                                    <li><a class="dropdown-item" href="./index.html#mod1">Módulo 1 - Introducción</a></li>
+                                    <li><a class="dropdown-item" href="./index.html#mod2">Módulo 2 - Habilidades de
                                             autonomía</a></li>
-                                    <li><a class="dropdown-item" href="./modulo3.html">Módulo 3 - Habilidades para la
+                                    <li><a class="dropdown-item" href="./index.html#mod3">Módulo 3 - Habilidades para la
                                             buena
                                             gestión del tiempo</a></li>
-                                    <li><a class="dropdown-item" href="./modulo4.html">Módulo 4 - Uso de herramientas
+                                    <li><a class="dropdown-item" href="./index.html#mod4">Módulo 4 - Uso de herramientas
                                             tecnológicas</a></li>
                                 </ul>
                                 
@@ -89,17 +89,17 @@
             <div class="formContent">
                 <p><label>Ingresa tu nombre completo:</label>
                     <br>
-                    <input type="text" name="nombrecompleto" style="width: 100%">
+                    <input type="text" name="nombrecompleto" style="width: 100%" placeholder="Escribe tu nombre completo aqui">
                 </p>
                 <br>
                 <p><label>Ingresa tu dirección de correo electrónico:</label>
                     <br>
-                    <input type="text" name="correoElectronico" style="width: 100%">
+                    <input type="text" name="correoElectronico" style="width: 100%" placeholder="Escribe tu dirección de correo aqui">
                 </p>
                 <br>
                 <p><label>Ingresa tu usuario de acceso:</label>
                     <br>
-                    <input type="text" name="UsuarioAcceso" style="width: 100%">
+                    <input type="text" name="UsuarioAcceso" style="width: 100%" placeholder="Escribe tu usuario aqui">
                 </p>
             </div>
         <hr>
@@ -168,11 +168,11 @@
         <div class="containerFooter">
             <div class="row">
                 <div class="col text-left">
-                    <p class="footerText">Encuéntranos en: <br><i class="fa-brands fa-facebook"></i> <a
+                    <p class="footerText">Encuéntranos en: <br><i class="bi bi-facebook"></i></i> <a
                             href="https://www.facebook.com/?locale=es_LA" target="_blank"> Facebook</a><br>
-                        <i class="fa-brands fa-twitter"></i> <a href="https://twitter.com/?lang=es"
+                            <i class="bi bi-twitter-x"></i> <a href="https://twitter.com/?lang=es"
                             target="_blank">Twitter</a><br>
-                        <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/" target="_blank">
+                            <i class="bi bi-instagram"></i></i> <a href="https://www.instagram.com/" target="_blank">
                             Instagram</a>
                     </p>
 
